[package]
name = "genkai_auth_endpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dotenv = "0.15"
hex = "0.4"
mongodb = "2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.3"
